--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -1,102 +1,58 @@
-/*Menu Principal Izquierdo*/
-nav {
-	margin: 27px auto 0;
-
-	position: relative;
-	width: 590px;
-	height: 50px;
-	background-color: #34495e;
-	border-radius: 8px;
-	font-size: 0;
+/*###################### Menu Principal ##############################################*/
+div#MenuHeader {
+    width: 10%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    color: #fff;
 }
-nav a {
-	line-height: 50px;
-	height: 100%;
-	font-size: 15px;
-	display: inline-block;
-	position: relative;
-	z-index: 1;
-	text-decoration: none;
-	text-transform: uppercase;
-	text-align: center;
-	color: white;
-	cursor: pointer;
+div#MenuDate {
+    font-size: 20px;
+    width: 29%;
+    text-align: left;
+    font-family: poppins;
+    margin: 0% 0% 0% 1%;
+    position: fixed;
+    top: 9%;
+    z-index: 1;
 }
-nav .animation {
-	position: absolute;
-	height: 100%;
-	top: 0;
-	z-index: 0;
-	transition: all .5s ease 0s;
-	border-radius: 8px;
-}
-a:nth-child(1) {
-	width: 100px;
-}
-a:nth-child(2) {
-	width: 110px;
-}
-a:nth-child(3) {
-	width: 100px;
-}
-a:nth-child(4) {
-	width: 160px;
-}
-a:nth-child(5) {
-	width: 120px;
-}
-nav .start-home, a:nth-child(1):hover~.animation {
-	width: 100px;
-	left: 0;
-	background-color: #1abc9c;
-}
-nav .start-about, a:nth-child(2):hover~.animation {
-	width: 110px;
-	left: 100px;
-	background-color: #e74c3c;
-}
-nav .start-blog, a:nth-child(3):hover~.animation {
-	width: 100px;
-	left: 210px;
-	background-color: #3498db;
-}
-nav .start-portefolio, a:nth-child(4):hover~.animation {
-	width: 160px;
-	left: 310px;
-	background-color: #9b59b6;
-}
-nav .start-contact, a:nth-child(5):hover~.animation {
-	width: 120px;
-	left: 470px;
-	background-color: #e67e22;
-}
-
-body {
-	font-size: 12px;
-	font-family: sans-serif;
-	background: #2c3e50;
-}
-h1 {
-	text-align: center;
-	margin: 40px 0 40px;
-	text-align: center;
-	font-size: 30px;
-	color: #ecf0f1;
-	text-shadow: 2px 2px 4px #000000;
-	font-family: 'Cherry Swash', cursive;
-}
-
-p {
-    position: absolute;
-    bottom: 20px;
+div.MenuOptions {
     width: 100%;
+    float: left;
+    font-size: 35px;
     text-align: center;
-    color: #ecf0f1;
-    font-family: 'Cherry Swash',cursive;
-    font-size: 16px;
+    height: 10%;
+    border-radius: 5px;
+}
+div#MenuHour {
+    font-size: 50px;
+    width: 29%;
+    text-align: left;
+    font-family: bebas;
+    height: 7%;
+    margin: 1% 0% 0% 1%;
+    position: fixed;
+    z-index: 1;
+}
+div#MenuOptions {
+    width: 5%;
+    text-align: center;
+    height: 85%;
+    bottom: 0;
+    position: fixed;
+    left: 1%;
+    z-index: 1;
+}
+/*###################### Contenedores ##############################################*/
+
+div#BackgroundPanel {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-size: cover;
+    z-index: -1;
+    top: 0;
 }
 
-span {
-    color: #2BD6B4;
-}
 /*################################################################################*/
