--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -1,4 +1,4 @@
-/*###################### Menu Principal ##############################################*/
+/***************************** [ Menu Principal ] *****************************/
 div#MenuHeader {
     width: 10%;
     height: 100%;
@@ -44,7 +44,7 @@ div#MenuOptions {
     left: 1%;
     z-index: 1;
 }
-/*###################### Contenedores ##############################################*/
+/***************************** [ Fondo de pantalla ] *****************************/
 
 div#BackgroundPanel {
     width: 100%;
@@ -55,4 +55,3 @@ div#BackgroundPanel {
     top: 0;
 }
 
-/*################################################################################*/
