--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -73,7 +73,7 @@ div#PanelRecommendedMovies {
     width: 100%;
     display: inline-block;
     height: 50%;
-    background-color: green; 
+    /* background-color: green;  */
     color: rgb;
     color: snow;
     overflow-x: scroll;
@@ -111,7 +111,7 @@ div#PanelAllMovies {
     width: 100%;
     height: 100%;
     overflow-y: scroll;
-    background-color: red; 
+    /* background-color: red;  */
     color: white;
     overflow: hidden;
 }
