--- a/Views/Layouts/Contents/Styles/Movies.css
+++ b/Views/Layouts/Contents/Styles/Movies.css
@@ -1,196 +1,77 @@
-/***************************** [ Menu Principal ] *****************************/
-div#MenuHeader {
-    width: 10%;
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : Jul 20, 2020, 11:34:13 AM
+    Author     : tania
+*/
+/*NEW#########################################################*/
+/***************************** [ Panel filtro por Año ] *****************************/
+div#yearfilter {
+    width: 19%;
+    /* display: inline-block; */
     height: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 1;
+    border-top-right-radius: 35px;
+    background: #15598e;
+    margin-top: 24px;
+}
+div#PanelYearFilter {
     color: #fff;
-}
-div#MenuDate {
-    font-size: 20px;
-    width: 29%;
-    text-align: left;
-    font-family: poppins;
-    margin: 0% 0% 0% 1%;
-    position: fixed;
-    top: 9%;
-    z-index: 1;
-}
-div.MenuOptions {
-    width: 100%;
-    float: left;
-    font-size: 35px;
-    text-align: center;
-    height: 10%;
-    border-radius: 5px;
-}
-div#MenuHour {
-    font-size: 50px;
-    width: 29%;
-    text-align: left;
-    font-family: bebas;
-    height: 7%;
-    margin: 1% 0% 0% 1%;
-    position: fixed;
-    z-index: 1;
-}
-div#MenuOptions {
-    width: 5%;
-    text-align: center;
-    height: 85%;
-    bottom: 0;
-    position: fixed;
-    left: 1%;
-    z-index: 1;
-}
-/***************************** [ Fondo de pantalla ] *****************************/
-
-div#BackgroundPanel {
-    width: 100%;
+    font-size: 25px;
+    width: 69%;
     height: 100%;
+    visibility: hidden;
     position: fixed;
-    background-size: cover;
-    z-index: -1;
-    top: 0;
+    z-index: 1;
+    display: flex;
+    right: 0;
 }
-
-/***************************** [ Contenedores ] *****************************/
-div#PanelRight {
-    width: 70%;
-    height: 95%;
+div#PanelMoviesByYear {
+    width: 56%;
+    height: 100%;
     position: fixed;
     right: 0;
-    bottom: 2%;
+    bottom: 0%;
     z-index: 1;
     overflow-y: scroll;
     overflow: hidden;
+    /* background-color: red; */
 }
-
-
-/***************************** [ Recommended Movies ] *****************************/
-div#PanelRecommendedMovies {
-    width: 100%;
-    display: inline-block;
+.yearOpts{
+    padding: 9px;
+    margin: 3px 0;
+    color: #ffffffd9;
+}
+div.MoviesByYearRow{
+    width: 98%;
+    float: right;
+    margin: 4.3% 1% 0% 1%;
     height: 50%;
-    /* background-color: green;  */
-    color: rgb;
-    color: snow;
-    overflow-x: scroll;
-    overflow: hidden;
 }
-div.RecommendedMoviesRow{
-    width: 98%;
-    float: right;
-    margin: 4.3% 1% 0% 1%;
-    height: 42%;
-    display: inline-table;
-}
-
-div.RecommendedMoviesRowPoster {
+div.RowMovieByYearPoster {
     width: 18%;
     height: 89%;
-    margin: 0% 0.6% 0% 0.6%;
+    /* margin: 0% 0.6% 0% 0.6%; */
     float: left;
     text-align: center;
     border: 3px solid transparent;
     border-radius: 3px;
+    margin-top: -10px;
+    margin-bottom: 45px;
+    margin-right: 15px;
 }
 
-div.RecommendedMoviesRowPoster img{
+div.RowMovieByYearPoster img{
     max-width: 100%;
     min-height: 100%;
 }
 
-div.RecommendedMoviesRowPoster h3 {
+div.RowMovieByYearPoster h3 {
     margin: 0;
     color: #fff;
 }
-/***************************** [ All Movies ] *****************************/
-div#PanelAllMovies {
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    /* background-color: red;  */
-    color: white;
-    overflow: hidden;
-}
-
-div.MoviesRow{
-    width: 98%;
-    float: right;
-    margin: 4.3% 1% 0% 1%;
-    height: 42%;
-}
-
-div.RowPoster {
-    width: 18%;
-    height: 89%;
-    margin: 0% 0.6% 0% 0.6%;
-    float: left;
-    text-align: center;
-    border: 3px solid transparent;
-    border-radius: 3px;
-}
-
-div.RowPoster img{
-    max-width: 100%;
-    min-height: 100%;
-}
-
-div.RowPoster h3 {
-    margin: 0;
-    color: #fff;
-}
-/***************************** [ Titulos ] *****************************/
-.PrincipalMoviesTitle{
-    color: honeydew;
-    font-size: 30px;
-    text-align: center;
-    text-shadow: 0.1em 0.1em 0.2em black;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-/***************************** [ Movies ] *****************************/
-div.moviePoster img{
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 12px;
-}
-div.moviePoster {
-    margin: 5px;
-}
-div.moviePoster p{
-    margin: 8px 0;
-    font-size: 15px;
-    text-align: center;
-}
-
-/***************************** [ Menu filtros ] *****************************/
-div#MenuFilters {
-    font-size: 25px;
-    color: #fff;
-    width: 31%;
-    height: 100%;
-    margin: 0;
-    visibility: hidden;
-    bottom: 0;
-    position: fixed;
-    /* background-image: url("../../vod/mvs/bg/bg4.jpg"); */
-    z-index: 1;
-    text-align: center;
-}
-
-div.OptionsFilter {
-    width: 90%;
-    text-align: center;
-    font-size: 27px;
-    line-height: normal;
-    margin: 5%;
-    height: 19%;
-    border-radius: 5px;
-}
-
 /***************************** [ Panel filtro por Genero ] *****************************/
 
 div#PanelGenderFilter {
@@ -243,73 +124,309 @@ div#PanelMoviesByGender {
     overflow: hidden;
     background-color: rgb(1, 17, 160);
 }
-
-/***************************** [ Panel filtro por Año ] *****************************/
-div#yearfilter {
-    width: 19%;
-    /* display: inline-block; */
-    height: 100%;
-    border-top-right-radius: 35px;
-    background: #15598e;
-    margin-top: 24px;
-}
-div#PanelYearFilter {
-    color: #fff;
+/***************************** [ Menu filtros ] *****************************/
+div#MenuFilters {
     font-size: 25px;
-    width: 69%;
+    color: #fff;
+    width: 31%;
     height: 100%;
+    margin: 0;
     visibility: hidden;
+    bottom: 0;
     position: fixed;
+    /* background-image: url("../../vod/mvs/bg/bg4.jpg"); */
     z-index: 1;
-    display: flex;
-    right: 0;
+    text-align: center;
 }
-div#PanelMoviesByYear {
-    width: 56%;
+
+div.OptionsFilter {
+    width: 90%;
+    text-align: center;
+    font-size: 27px;
+    line-height: normal;
+    margin: 5%;
+    height: 19%;
+    border-radius: 5px;
+}
+/***************************** [ Opciones en modo no visible ] *****************************/
+div.PlayingOptionsHidden{
+    width: 100%;
+    height: 36%;
+    position: fixed;
+    text-shadow: 1px 1px 1px #000;
+    color: #fff;
+    /* background: red; */
+    margin-top: 13%;
+    visibility: hidden;
+}
+div#PlayingPanelHidden {
+    visibility: hidden;
+    width: 100%;
     height: 100%;
-    position: fixed;
-    right: 0;
-    bottom: 0%;
-    z-index: 1;
-    overflow-y: scroll;
+    margin: 0;
+    background: rgba(0,0,0,0.3);
+}
+div.ButtonContainer{
+    width: 23%;
+    height: 100%;
+    /* background: blue; */
+    /* border: 3px solid rgb(255, 255, 255); */
+    display: inline-block;
+    margin-left: 0%;
+}
+div.ButtonPlayingHidden{
+    width: 11%;
+    display: inline-block;
+    font-size: 64px;
+    height: 30%;
+    border-radius: 7px;
+    margin: 5% 0.5% 0% 0.5%;
+    color: rgb(255, 9, 9);
+    text-shadow: 1px 1px 1px #000;
+    margin-left: 40%;
+    margin-top: 25%;
+}
+/***************************** [ Recommended Movies ] *****************************/
+div#PanelRecommendedMovies {
+    width: 100%;
+    display: inline-block;
+    height: 50%;
+    /* background-color: green;  */
+    color: rgb;
+    color: snow;
+    overflow-x: scroll;
     overflow: hidden;
-    background-color: red;
 }
-.yearOpts{
-    padding: 9px;
-    margin: 3px 0;
-    color: #ffffffd9;
-}
-div.MoviesByYearRow{
+div.RecommendedMoviesRow{
     width: 98%;
     float: right;
     margin: 4.3% 1% 0% 1%;
-    height: 50%;
+    height: 42%;
+    display: inline-table;
 }
-div.RowMovieByYearPoster {
+
+div.RecommendedMoviesRowPoster {
     width: 18%;
     height: 89%;
-    /* margin: 0% 0.6% 0% 0.6%; */
+    margin: 0% 0.6% 0% 0.6%;
     float: left;
     text-align: center;
     border: 3px solid transparent;
     border-radius: 3px;
-    margin-top: -10px;
-    margin-bottom: 45px;
-    margin-right: 15px;
 }
 
-div.RowMovieByYearPoster img{
+div.RecommendedMoviesRowPoster img{
     max-width: 100%;
     min-height: 100%;
 }
 
-div.RowMovieByYearPoster h3 {
+div.RecommendedMoviesRowPoster h3 {
     margin: 0;
     color: #fff;
 }
+/***************************** [ Titulos ] *****************************/
+.PrincipalMoviesTitle{
+    color: honeydew;
+    font-size: 30px;
+    text-align: center;
+    text-shadow: 0.1em 0.1em 0.2em black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+/***************************** [ All Movies ] *****************************/
+div#PanelAllMovies {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    /* background-color: red;  */
+    color: white;
+    overflow: hidden;
+}
 
-/***************************** [ Panel Pelicula Seleccionada ] *****************************/
+div.MoviesRow{
+    width: 98%;
+    float: right;
+    margin: 4.3% 1% 0% 1%;
+    height: 42%;
+}
+
+div.RowPoster {
+    width: 18%;
+    height: 89%;
+    margin: 0% 0.6% 0% 0.6%;
+    float: left;
+    text-align: center;
+    border: 3px solid transparent;
+    border-radius: 3px;
+}
+
+div.RowPoster img{
+    max-width: 100%;
+    min-height: 100%;
+}
+
+div.RowPoster h3 {
+    margin: 0;
+    color: #fff;
+}
+/***************************** [ Contenedores generales ] *****************************/
+
+div#PanelHeader {
+    width: 10%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    color: #fff;
+}
+
+div#PanelLeft {
+    width: 20%;
+    height: 100%;
+    position: fixed;
+    left: 10%;
+    bottom: 0;
+    z-index: 1;
+}
+
+div#PanelRight {
+    width: 70%;
+    height: 95%;
+    position: fixed;
+    right: 0;
+    bottom: 2%;
+    z-index: 1;
+}
+
+div.OptionFocus {
+    box-shadow: 0px 0px 11px rgba(255, 255, 255, 0.7);
+text-shadow: 2px 2px 6px rgba(255, 255, 255, 0.7);
+}
+
+
+div#BackgroundPanel {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-size: cover;
+    z-index: 0;
+    top: 0;
+}
+
+/***************************** [ Cabezera ] *****************************/
+
+div#MenuHour {
+    font-size: 50px;
+    width: 29%;
+    text-align: left;
+    font-family: bebas;
+    height: 7%;
+    margin: 1% 0% 0% 3%;
+    position: fixed;
+    z-index: 1;
+}
+
+div#MenuDate {
+    font-size: 20px;
+    width: 29%;
+    text-align: left;
+    font-family: poppins;
+    margin: 0% 0% 0% 3%;
+    position: fixed;
+    top: 9%;
+    z-index: 1;
+}
+
+div#MenuOptions {
+    width: 5%;
+    text-align: center;
+    height: 85%;
+    bottom: 0;
+    position: fixed;
+    left: 3%;
+    z-index: 1;
+}
+
+div.MenuOptions {
+    width: 100%;
+    float: left;
+    font-size: 35px;
+    text-align: center;
+    height: 10%;
+    border-radius: 5px;
+}
+
+.Selected {
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    background: rgba(0, 0, 0, 0.3);
+}
+
+div#Banner {
+    width: 69%;
+    height: 50%;
+    background-size: 100% 100%;
+    float: right;
+    margin-right: 1%;
+    display: none;
+}
+
+/***************************** [ Filtros derecha ] *****************************/
+
+
+div#Filter {
+    width: 90%;
+    text-align: left;
+    font-size: 33px;
+    line-height: normal;
+    margin: 0 5% 0 5%;
+    border-radius: 5px;
+    font-family: bebas;
+}
+
+div.OptionsFilter {
+    width: 90%;
+    text-align: center;
+    font-size: 40px;
+    line-height: normal;
+    margin: 5%;
+    height: 19%;
+    border-radius: 5px;
+    font-family: bebas;
+}
+
+/***************************** [ Peliculas derecha ] *****************************/
+
+
+/* div.MoviesRow{
+    width: 98%;
+    float: right;
+    margin: 4.3% 1% 0% 1%;
+    height: 42%;
+
+}
+
+div.RowPoster {
+    width: 18%;
+    height: 85%;
+    margin: 0% 0.6% 0% 0.6%;
+    float: left;
+    text-align: center;
+    border: 3px solid transparent;
+    border-radius: 3px;
+}
+
+div.RowPoster img{
+    max-width: 100%;
+    min-height: 100%;
+}
+
+div.RowPoster h3 {
+    margin: 0;
+    color: #fff;
+} */
+
+/***************************** [ Panel pelicula ] *****************************/
+
+
 div#MoviePanel {
     font-size: 25px;
     color: #fff;
@@ -319,16 +436,34 @@ div#MoviePanel {
     visibility: hidden;
     bottom: 0;
     position: fixed;
-    background: rgba(4, 19, 53, 0.77);
+    background: rgba(0, 0, 0, 0.7);
     z-index: 1;
 }
+
+
+div.MovieTitle {
+/*    font-size: 39px;
+    width: 80%;
+    font-weight: bold;
+    float: left;
+    margin-top: 2%;*/
+font-size: 50px;
+width: 80%;
+font-weight: bold;
+float: left;
+margin-top: 4%;
+font-family: gloss;
+color: #ffffce;
+}
+
 .Poster {
     max-width: 15%;
-    min-height: 40%;
-    float: left;
-    margin: 1.5%;
-    border-radius: 15px;
+min-height: 40%;
+float: left;
+margin: 3% 1.5% 1% 3%;
+border-radius: 8px;
 }
+
 div.MovieDuration {
     width: 15%;
     font-weight: bold;
@@ -337,6 +472,16 @@ div.MovieDuration {
     text-align: center;
     padding: 0.3%;
 }
+
+div.Genders {
+    width: 30%;
+    font-weight: bold;
+    float: left;
+    margin: 1% 0%;
+    text-align: left;
+    padding: 0.3%;
+}
+
 div.Year {
     width: 12%;
     font-weight: bold;
@@ -382,37 +527,55 @@ div.Star {
 }
 
 div.MovieDescription {
-    width: 80%;
+    width: 75%;
     font-weight: bold;
     float: left;
 }
+
+div#PlayPanel {
+    left: 5%;
+}
+
+div#ExitPanel {
+    left: 20%;
+}
+
 div.Casting {
-    width: 98%;
+    width: 90%;
     font-weight: bold;
     float: left;
-    margin: 1% 1% 0% 1%;
+    margin: 1% 1% 0% 3%;
     text-align: left;
     font-size: 23px;
     color: #8abfe6;
 }
 
+div.Director {
+    width: 98%;
+    font-weight: bold;
+    float: left;
+    margin: 2% 1% 1% 3%;
+    text-align: left;
+    font-size: 23px;
+    color: #abd1ed;
+}
+
 div.Buttons {
     width: 14%;
     font-size: 30px;
-    border-radius: 39px;
-    background: rgba(255, 255, 255, 0.28);
+    /*border-radius: 39px;*/
+    /*background: rgba(255, 255, 255, 0.28);*/
     text-align: center;
     bottom: 10%;
     position: fixed;
     margin: 1%;
+    border: 2px solid transparent;
 }
-div#PlayPanel {
-    left: 5%;
-    background-color: rgba(7, 197, 245, 0.88);
-}
-div#ExitPanel {
-    left: 20%;
-    background-color: rgba(7, 197, 245, 0.88);
+
+div.MovieOption {
+    border: 2px solid #fff;
+    /*background: rgba(255, 255, 255, 0.44);*/
+    text-shadow: 2px 2px 2px #000;
 }
 
 /***************************** [ Opciones reproduccion ] *****************************/
@@ -457,13 +620,14 @@ div#ExitPlaying {
     text-align: center;
     font-size: 35px;
     top: 3%;
+    border-radius: 10px;
 }
 
 div.PlayingBar {
     width: 100%;
     height: 1%;
     position: fixed;
-    background: rgba(0,0,0,0.5);
+    background: rgba(255, 255, 255, 0.5);
     bottom: 12%;
 }
 
@@ -498,87 +662,10 @@ div.ButtonPlaying {
     color: #fff;
     text-shadow: 1px 1px 1px #000;
 }
-/***************************** [ Opciones en modo no visible ] *****************************/
-div.PlayingOptionsHidden{
-    width: 100%;
-    height: 36%;
-    position: fixed;
-    text-shadow: 1px 1px 1px #000;
-    color: #fff;
-    /* background: red; */
-    margin-top: 13%;
-}
-div#PlayingPanelHidden {
-    visibility: hidden;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    background: rgba(0,0,0,0.3);
-}
-div.ButtonContainer{
-    width: 23%;
-    height: 100%;
-    /* background: blue; */
-    /* border: 3px solid rgb(255, 255, 255); */
-    display: inline-block;
-    margin-left: 0%;
-}
-div.ButtonPlayingHidden{
-    width: 11%;
-    display: inline-block;
-    font-size: 64px;
-    height: 30%;
-    border-radius: 7px;
-    margin: 5% 0.5% 0% 0.5%;
-    color: rgb(255, 255, 255);
-    text-shadow: 1px 1px 1px #000;
-    margin-left: 40%;
-    margin-top: 25%;
-}
-/***************************** [ Estilos barras de navegacion ] *****************************/
-div#NavContainer{
-    width: 100%;
-    display: inline-block;
-    height: 32%;
-    /* background-color: rgb(9, 0, 128); */
-    color: rgb;
-    color: snow;
-    position: absolute;
-    margin-top: 11%;
-    margin-left: 78%;
-}
-div.RightIndicator{
-    width: 8%;
-    display: inline-block;
-    font-size: 73px;
-    height: 34%;
-    border-radius: 7px;
-    margin: 5% 0.5% 0% 0.5%;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    margin-top: 6%;
-    /* background-color: red; */
-}
-div#NavContainerLeft{
-    width: 100%;
-    display: inline-block;
-    height: 32%;
-    /* background-color: rgb(9, 0, 128); */
-    color: rgb;
-    color: snow;
-    position: absolute;
-    margin-top: 7%;
-    margin-left: 24%;
-}
-div.LeftIndicator{
-    width: 8%;
-    display: inline-block;
-    font-size: 73px;
-    height: 34%;
-    border-radius: 7px;
-    margin: 5% 0.5% 0% 0.5%;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    margin-top: 6%;
-    /* background-color: red; */
+
+
+div.ButtonFocus {
+    background: rgba(255,255,255,0.5);
+    box-shadow: 2px 2px 6px rgba(0,0,0,0.5);
+    text-shadow: 2px 2px 6px rgba(0,0,0,0.5);
 }
