--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -51,13 +51,13 @@ The above copyright notice and this permission notice shall be included in all c
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="card card-stats">
-                            <div class="card-header card-header-warning card-header-icon">
+                            <div class="card-header card-header-success card-header-icon">
                                 <div class="card-icon">
-                                    <i class="material-icons">content_copy</i>
+                                    <i class="material-icons">settings_power</i>
                                 </div>
-                                <p class="card-category">Used Space</p>
-                                <h3 class="card-title">49/50
-                                    <small>GB</small>
+                                <p class="card-category">Dispositivos encendidoss</p>
+                                <h3 class="card-title">150
+                                    <small>ON</small>
                                 </h3>
                             </div>
                             <div class="card-footer">
