Creacion controlador y actualizacion DAO devices

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -55,15 +55,12 @@ The above copyright notice and this permission notice shall be included in all c
                                 <div class="card-icon">
                                     <i class="material-icons">settings_power</i>
                                 </div>
-                                <p class="card-category">Dispositivos encendidoss</p>
-                                <h3 class="card-title">150
-                                    <small>ON</small>
-                                </h3>
+                                <p class="card-category">Dispositivos encendidos</p>
+                                <h3 class="card-title">150 ON</h3> <!-- BD DATA-->
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
-                                    <i class="material-icons text-danger">warning</i>
-                                    <a href="javascript:;">Get More Space...</a>
+                                    <i class="material-icons">update</i> Just Updated <!-- BD DATA-->
                                 </div>
                             </div>
                         </div>
@@ -72,10 +69,10 @@ The above copyright notice and this permission notice shall be included in all c
                         <div class="card card-stats">
                             <div class="card-header card-header-success card-header-icon">
                                 <div class="card-icon">
-                                    <i class="material-icons">store</i>
+                                    <i class="material-icons">settings_power</i>
                                 </div>
-                                <p class="card-category">Revenue</p>
-                                <h3 class="card-title">$34,245</h3>
+                                <p class="card-category">Dispositivos apagados</p>
+                                <h3 class="card-title">83 OFF</h3> <!-- BD DATA-->
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
