Actualizacion estatus dispositivo

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -696,6 +696,11 @@ The above copyright notice and this permission notice shall be included in all c
         });
     });
 </script>
+<script>
+    //
+
+
+</script>
 
 </body>
 
