Prueba controlador dispositivo > estatus > 5

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -715,7 +715,7 @@ The above copyright notice and this permission notice shall be included in all c
         });
     }
 
-    GetDevicesByStatus('POWER_OFF');
+    GetDevicesByStatus('POWER_ON');
 
 
 </script>
