Pruebas query estatus dispositivos 4

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -714,7 +714,7 @@ The above copyright notice and this permission notice shall be included in all c
             }
         });
     }
-
+console.log('-------->');
     GetDevicesByStatus('POWER_ON');
 
 
