Actualizacion html div con ID cardsheader

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -48,9 +48,9 @@ The above copyright notice and this permission notice shall be included in all c
         <!-- End Navbar -->
         <div class="content">
             <div class="container-fluid">
-                <div class="row">
+                <div class="row" id="CardsHeader">
                     <div class="col-lg-3 col-md-6 col-sm-6">
-                        <div class="card card-stats" id="CardsHeader">
+                        <div class="card card-stats">
                             <div class="card-header card-header-success card-header-icon">
                                 <div class="card-icon">
                                     <i class="material-icons">settings_power</i>
